<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_stream_background"
    >

    <TextView
        style="@style/header_style"
        android:id="@+id/tv_header"
        android:layout_above="@+id/tv_qr_code"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/header_link_via"
        />

    <TextView
        style="@style/text_style"
        android:id="@+id/tv_nfc"
        android:layout_above="@+id/tv_or"
        android:layout_toEndOf="@+id/tv_or"
        android:layout_toRightOf="@+id/tv_or"
        android:drawableTop="@drawable/ic_nfc"
        android:text="@string/nfc"
        />

    <TextView
        style="@style/text_style"
        android:id="@+id/tv_qr_code"
        android:layout_above="@+id/tv_or"
        android:layout_toLeftOf="@+id/tv_or"
        android:layout_toStartOf="@+id/tv_or"
        android:drawableTop="@drawable/ic_memory"
        android:text="@string/qr_code"
        />

    <TextView
        style="@style/text_style"
        android:id="@+id/tv_or"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/or"
        />

    <TextView
        style="@style/text_style"
        android:id="@+id/tv_ip_number"
        android:layout_below="@id/tv_or"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/ic_create"
        android:text="@string/type_ip_manually"
        />

    <TextView
        style="@style/text_style"
        android:id="@+id/tv_description"
        android:layout_below="@id/tv_ip_number"
        android:paddingLeft="@dimen/fragment_tutorial_horizontal_margin"
        android:paddingRight="@dimen/fragment_tutorial_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/ht_link_via"
        />
</RelativeLayout>