<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/start_stream_background"
    >

    <TextView
        style="@style/header_style"
        android:id="@+id/tv_type_ip"
        android:layout_above="@+id/et_ip_number"
        android:layout_centerHorizontal="true"
        android:text="@string/write_ip_addres"
        />

    <EditText
        android:id="@+id/et_ip_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:digits="0123456789."
        android:ems="10"
        android:inputType="number|text"
        android:textColor="@color/white"
        android:theme="@style/edit_text_style"
        />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_ip_number"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/connect"
        />

    <TextView
        style="@style/text_style"
        android:id="@+id/tv_description"
        android:layout_below="@id/btn_connect"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/about_input_ip"
        />
</RelativeLayout>