<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:weightSum="5"
    >

    <RelativeLayout
        android:id="@+id/header_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:id="@+id/endoscope_text"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/endoscope_logo"
            android:src="@drawable/endoscope_logo_text" />

        <ImageView
            android:id="@+id/endoscope_logo"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="-20dp"
            android:src="@drawable/endoscope_apart_icon2" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/section_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/start_stream"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/start_stream_background"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="intentStreamVideo"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/start_stream_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/start_stream_text"
                android:src="@drawable/ic_linked_camera" />

            <TextView
                style="@style/text_style"
                android:id="@+id/start_stream_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_stream"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_stream"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/view_stream_background"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="intentViewStream"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_stream_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phonelink" />

            <TextView
                style="@style/text_style"
                android:id="@+id/view_stream_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_stream"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_down"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:focusableInTouchMode="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/settings_background"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="intentSettings"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings" />

            <TextView
                style="@style/text_style"
                android:id="@+id/settings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_uppercase"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/how_to_use"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/how_to_use_background"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="intentHowToUse"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/how_to_use_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_explore" />

            <TextView
                style="@style/text_style"
                android:id="@+id/how_to_use_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


